<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">恰饭喽</string>
    <string name="hello_world">hello_world</string>
    <string name="test">XXXXXXXXXX</string>
    <string name="fastFood">今日快餐</string>
    <string name="cleanFood">今日净菜</string>
    <string name="tormorowfastFood">明日快餐</string>
    <string name="tormorowcleanFood">明日净菜</string>
    <string name="currentCity">贵阳</string>
    <string name="mainPage">外卖</string>
    <string name="shopCarPage">购物车</string>
    <string name="goshopCarPage">去购物车</string>
    <string name="PersonalPage">个人</string>
    <string name="joinshopcar">加入购物车</string>
    <string name="foodsdetailmsg">商品详情</string>
    <string name="fujindizhi">附近地址</string>
    <string name="dinweidaodangqianweizhi">定位到当前位置</string>
    <string name="selectgoodsPalce">选择收货地址</string>
    <string name="inputgoodsPalce">请输入收货地址</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="error_other1">未知错误，请稍后重试!</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_sett">编辑</string>
    <string name="menu_enter">完成</string>
    <string name="menu_del">删除</string>
    <string name="mygoods">我的订单</string>
    <string name="waitpay">待付款</string>
    <string name="waitgo">待配送</string>
    <string name="hadgo">已送出</string>
    <string name="hadcomplic">待评价</string>
    <string name="myscore">我的积分</string>
    <string name="myscore_use">积分记录</string>
    <string name="myleftmoney">账户余额</string>
    <string name="mymanageaddress">地址管理</string>
    <string name="mycleancash">清除缓存</string>
    <string name="myshareapp">分享APP</string>
    <string name="mynew">版本更新</string>
    <string name="myloginout">退出登录</string>
    <string name="myorder">我的订单</string>
    <string name="myorder_detail">订单详情</string>
    <string name="mysystemseting">系统设置</string>
    <string name="Check">结算</string>
    <string name="goCheck">去支付</string>
    <string name="totalgoods">已选0件商品</string>
    <string name="totalmoney">￥0.00 </string>
    <string name="Total">合计:</string>
    <string name="shouldpay">实付金额：</string>
    <string name="forgot_pwd">忘记密码?</string>
    <string name="phonenum">输入手机号</string>
    <string name="pwd">输入密码</string>
    <string name="pwdagain">确认密码</string>
    <string name="loginbtntext">登  录</string>
    <string name="loading">正在登录</string>
    <string name="regist">注册</string>
    <string name="registnum">获取验证码</string>
    <string name="inputpwd">输入密码</string>
    <string name="findpwd">找回密码</string>
    <string name="getidentfycode">获取验证码</string>
    <string name="identfy">验证</string>
    <string name="accuntnum">输入账号</string>
    <string name="next">下一步</string>
    <string name="inputidentifynum">输入验证码</string>
    <string name="telnumerrorremian">电话号码格式无效，请重新输入。</string>
    <string name="pwdnosameto">两次密码不一致</string>
    <string name="pwdnotnull">密码不能为空</string>
    <string name="pwdisshort">密码长度不能小于6位</string>
    <string name="telnumnotnull">手机号不能为空</string>
    <string name="identifynotnull">验证码不能为空</string>
    <string name="showpwd">显示密码</string>
    <string name="changepwdok">新密码设置成功！</string>
    <string name="changepwdgobacktologin">请返回登录</string>
    <string name="numyoufind">输入手机号码</string>
    <string name="numis">的密码</string>
    <string name="reset">重置</string>
    <string name="manageplace">地址管理</string>
    <string name="myplace">我的收货地址</string>
    <string name="createplace">新建收货地址</string>
    <string name="addplace">添加收货地址</string>
    <string name="editplace">编辑收货地址</string>
    <string name="saveplace">保存</string>
    <string name="saveok">保存成功</string>
    <string name="saveplace_people">联系人</string>
    <string name="saveplace_name">收货人:</string>
    <string name="saveplace_inputname">请输入姓名</string>
    <string name="saveplace_man">先生</string>
    <string name="saveplace_woman">女士</string>
    <string name="select_sex">请选择性别</string>
    <string name="saveplace_phone">手机:</string>
    <string name="saveplace_phonetips">请输入收获手机号码，以便联系您</string>
    <string name="saveplace_place">收货地址</string>
    <string name="saveplace_placelogo">小区/大厦/学校:</string>
    <string name="saveplace_clickselect">点击选择</string>
    <string name="saveplace_doornum">楼号-门牌号:</string>
    <string name="saveplace_doornumtips">例如:1号楼311室</string>
    <string name="namenotnull">收货人不能为空</string>
    <string name="placenotnull">地址信息不能为空</string>
    <string name="sexnotnull">性别信息不能为空</string>
    <string name="saveplace_placelogotips">请输入小区/大厦/学校等进行搜索</string>
    <string name="addorder">填写订单信息</string>
    <string name="order_payway">支付方式</string>
    <string name="order_selectpayway">请选择支付方式</string>
    <string name="order_selectpaytime">设置收货时间</string>
    <string name="order_payonnet">在线支付</string>
    <string name="order_payonface">货到付款</string>
    <string name="order_score">积分:</string>
    <string name="order_deliverway">配送方式:</string>
    <string name="order_thesamesity">同城速递</string>
    <string name="order_byself">上门自提</string>
    <string name="order_ISbyself">是否上门自提</string>
    <string name="order_ISUseScore">是否使用积分</string>
    <string name="order_setplace">设置收货地址</string>
    <string name="order_settime">设置收货时段</string>
    <string name="order_scoreway">点击获取积分信息</string>
    <string name="order_shoppoint">配送点信息</string>
    <string name="order_isusescore">使用积分</string>
    <string name="order_moremessage">备注</string>
    <string name="order_addmoremessage">添加备注</string>
    <string name="order_detailmore">输入你的要求</string>
    <string name="order_detailtisp">由 商家 配送</string>
    <string name="time_cancel">取 消</string>
    <string name="exit_app">退出登录</string>
    <string name="buy_ok">购买成功</string>
    <string name="buy_oktips">你已经下单成功，请稍候！</string>
    <string name="buy_backbuyagin">返回再次购买</string>
    <string name="pay_order">订单支付</string>
    <string name="pay_lefttime">支付剩余时间</string>
    <string name="pay_paybyzhifubao">支付宝支付</string>
    <string name="pay_paybyweixin">微信支付</string>
    <string name="pay_paybyyinglian">银联支付</string>
    <string name="pay_paybyzhifubaotips">推荐有支付宝账号的用户使用</string>
    <string name="pay_paybytips">暂未开通</string>
    <string name="pay_confirm">确认支付¥</string>
    <string name="pay_second">s</string>
    <string name="ziying">自营</string>
    <string name="support_takebyself">支持门店自提</string>
    <string name="free_post">免费配送</string>
    <string name="more_wait">更多出品，敬请期待</string>
    <string name="go_more"> 继续拖动，查看图文详情</string>
    <string name="select_payway">选择支付方式</string>
    <string name="app_update">版本更新</string>
    <string name="update_wait">以后再说</string>
    <string name="app_update_confirm">立即更新</string>
    <string name="Share">分享</string>
    <string name="check_update">检查更新</string>
    <string name="login_namepwd">账号密码登录</string>
    <string name="login_identifycode">短信登录</string>
    <string name="no_more_order">无更多订单</string>

</resources>