<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/tophead" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#778899" />

    <LinearLayout
        android:id="@+id/selectPlaceLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFAFA"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/nowCityTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="0.3"
            android:text="@string/currentCity"
            android:textSize="@dimen/common_testsize"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/mSelectActvityPlaceTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/text_search"
            android:completionThreshold="1"
            android:dropDownVerticalOffset="1.0dip"
            android:hint="@string/inputgoodsPalce"
            android:imeOptions="actionDone"
            android:inputType="text|textAutoComplete"
            android:paddingLeft="5dp"
            android:singleLine="false"
            android:textSize="@dimen/common_testsize" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#778899" />

    <Button
        android:id="@+id/setAsTheCurerentPlaceBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFAFA"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/dinweidaodangqianweizhi"
        android:textSize="@dimen/common_testsize"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#778899" />

    <Button
        android:id="@+id/nearByUnuse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFAFA"
        android:gravity="center_vertical"
        android:hint="@string/fujindizhi"
        android:paddingLeft="15dp"
        android:textSize="@dimen/common_testsize"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#778899" />

    <ListView
        android:id="@+id/selectActivityNearByPleaceLV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>